# pySSH

./: .gitignore  LICENSE  README.md  __init__.py  client.py  establish.py  exceptions.py  kexinit.py  pyproject.toml  requirements.txt  server.py  setup.py
example/: chat.py  snake.py
pyssh/: __init__.py  client.py  server.py
pyssh/_core/: __init__.py  _conn_setup.py  _core_classes.py  client.py  encrpytion.py  encryption.py  hash.py  hostkey.py  kex.py  mac.py  message.py  reader.py  server.py
pyssh/_core/_packets/: __init__.py  _conn_setup.py  _default_packets.py
pyssh/_core/_util/: __init__.py  _data_types.py
pyssh/_core/hostkey/: __init__.py  hostkey.py  ssh_rsa.py
pyssh/_core/kex/: __init__.py  dh.py
pyssh/_core/packets/: __init__.py  _conn_setup.py  _ssh_packet.py  default_packets.py
pyssh/ssh_establish/: __init__.py  establish.py  kexinit.py  server_packets.py
pyssh/ssh_packet/: basepacket.py  packet_decoder.py
pyssh/util/: __init__.py  _data_types.py
test/: auto.sh  basic_connection.sh  classes.py  packet_decoder.py  start_server.py  subc.py  test_core.py  test_core_util.py  test_util.py  testing.py
